Revert "#109 - fix horizontal scroll on paragraph full-width"
This reverts commit 6cb7a444195379c2168ba030cd0cd5f920eb6332.

--- a/themes/bene_base/css/bene-style.css
+++ b/themes/bene_base/css/bene-style.css
@@ -1333,8 +1333,7 @@ input[type='submit'] {
   padding: 1.5rem 1.5rem 2.25rem 1.5rem;
   position: relative;
   text-align: center;
-  width: 100vw;
-  max-width: 100%; }
+  width: 100vw; }
   .paragraph--type--feature-full-width:before {
     background-color: rgba(0, 0, 0, 0.4);
     bottom: 0;
